--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,5 +6,7 @@
     <ItemGroup>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
         <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
     </ItemGroup>
 </Project>
