migrate db to postgres

--- a/src/DictionaryApi/appsettings.json
+++ b/src/DictionaryApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DictionaryDb": "Host=localhost;Port=5432;Database=Dictionary;User Id=postgres;Password=mysecretpassword;"
+  }
 }
