--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,8 @@
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
         <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
+        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2" />
     </ItemGroup>
 </Project>
