--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,24 @@ version: '3.4'
 
 services:
   dictionary-db:
+    container_name: dictionary-db
     image: postgres
     restart: always
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - ~/temp/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=mysecretpassword
       - POSTGRES_USER=postgres
+  
+  dictionary-api:
+    container_name: dictionary-api
+    build:
+      context: .
+      dockerfile: src/DictionaryApi/Dockerfile
+    depends_on: [dictionary-db]
+    ports:
+      - "8080:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
